tests/ui/missing_poll.stderr
error: expected format: pattern | on!(future)
 --> tests/ui/missing_poll.rs:8:9
  |
8 |         _ | _ => invalid,
  |         ^
